[package]
name = "syncarp"
version = "0.1.0"
authors = ["laurent <laurent.mazare@gmail.com>"]
edition = "2018"

description = "Rust implementation of the OCaml Async_rpc protocol."
repository = "https://github.com/LaurentMazare/syncarp"
keywords = ["bin_prot", "rpc", "protocol", "network"]
categories = ["network-programming"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
async-trait = "0"
byteorder = "1"
binprot_derive = "0"
binprot = "0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
anyhow = "1"
